Fixing issue AXIS2C-1441