util/include/axutil_utils_defines.h
@@ -119,26 +119,25 @@ extern "C"
       *   Calling Conventions
       */
 #if defined(__GNUC__)
+
 #if defined(__i386)
 #define AXIS2_CALL __attribute__((cdecl))
 #define AXIS2_WUR __attribute__((warn_unused_result))
 #else
 #define AXIS2_CALL
 #define AXIS2_WUR
-
-
 #endif
-#else
-#if defined(__unix)
+
+#elif defined(_WIN32)
+#define AXIS2_CALL __stdcall
+#define AXIS2_WUR
+
+#else                           /* Unix */
 #define AXIS2_CALL
 #define AXIS2_WUR
 
+#endif
 
-#else                           /* WIN32 */
-#define AXIS2_CALL __stdcall
-#define AXIS2_WUR
-#endif
-#endif
 #define AXIS2_THREAD_FUNC AXIS2_CALL
 
 
